<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:isScrollContainer="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
	
    <TextView
    android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    android:textAppearance="?android:attr/textAppearanceLarge" />
    
	<LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginTop="22dp" >
    	
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="Current Temperature:"
	        android:layout_weight="2"
	        android:gravity="center_vertical|left"
	        />
	    <TextView
	        android:id="@+id/currentTempText"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="0"
	        android:layout_weight="1"
	        android:gravity="center_vertical|right"
	        />
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/degree_celsius"
	        android:layout_weight="1"
	        android:gravity="center_vertical|left"
	        />
	    
    </LinearLayout>
    
	<LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
    	
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="Current Time:"
	        android:layout_weight="2"
	        android:gravity="center_vertical|left"
	        />
	    <TextView
	        android:id="@+id/currentTimeText"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="0"
	        android:layout_weight="1"
	        android:gravity="center_vertical|right"
	        />
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="s"
	        android:layout_weight="1"
	        android:gravity="center_vertical|left"
	        />
	    
    </LinearLayout>
    
	<LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
    	
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="Current State:"
	        android:layout_weight="1"
	        android:gravity="center_vertical|left"
	        />
	    <TextView
	        android:id="@+id/currentStateText"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="No State"
	        android:layout_weight="1"
	        android:gravity="center_vertical|center"
	        />
	    
    </LinearLayout>
	
	<LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginTop="10dp" >
	
        <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    
	    >
	    
            <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/soak_temp"
	        android:layout_weight="1"
	        android:gravity="center_vertical|left"
	        />
            
            <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/soak_time"
	        android:layout_weight="1"
	        android:gravity="center_vertical|left"
	        />
            
            <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/reflow_temp"
	        android:layout_weight="1"
	        android:gravity="center_vertical|left"
	        />
            
            <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/reflow_time"
	        android:layout_weight="1"
	        android:gravity="center_vertical|left"
	        />
	    
	    </LinearLayout>
	    
        <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	     >
	    
			<EditText
	        android:id="@+id/soak_temp_text"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:inputType="number"
	        android:imeOptions="actionNext"
	        />
			
			<EditText
	        android:id="@+id/soak_time_text"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:inputType="number"
	        android:imeOptions="actionNext"
	        />
			
	        <EditText
	        android:id="@+id/reflow_temp_text"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:inputType="number"
	        android:imeOptions="actionNext"
	        />
	        
	        <EditText
	        android:id="@+id/reflow_time_text"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:inputType="number"
	        android:imeOptions="actionDone"
	        />
	    
	    </LinearLayout>
        
	</LinearLayout>
    
    
    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ipaddress" />

    <LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    
	    android:layout_marginTop="10dp" >
    	<EditText
        android:id="@+id/ipaddress_text_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="number"
        android:maxLength="3"
        android:imeOptions="actionNext"/>
    	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="." />
    	<EditText
        android:id="@+id/ipaddress_text_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="number"
        android:maxLength="3"
        android:imeOptions="actionNext"/>
    	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="." />
    	<EditText
        android:id="@+id/ipaddress_text_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="number"
        android:maxLength="3"
        android:imeOptions="actionNext"/>
    	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="." />
    	<EditText
        android:id="@+id/ipaddress_text_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="number"
        android:maxLength="3"
        android:imeOptions="actionNext"/>
    	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":" />
    	<EditText
        android:id="@+id/ipaddress_text_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="number"
        android:maxLength="4"/>
    	
    </LinearLayout>

</LinearLayout>
</ScrollView>